# dados

./: .gitignore  .pre-commit-config.yaml  README.md  calculate_dates.sh  main.py  pyproject.toml  requirements.txt  streamlit.service
.github/: CODEOWNERS
.github/workflows/: deploy.yaml  report.yaml
data/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-01/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-02/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-03/: pages_info.json  website_dimensions_info.json
data/2024-04/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-05/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-06/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-07/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-08/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-09/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-10/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-11/: pages_info.json  website_dimensions_info.json  website_info.json
data/2024-12/: pages_info.json  website_dimensions_info.json  website_info.json
data/2025-01/: pages_info.json  website_dimensions_info.json  website_info.json
google-analytics/: report.py  report_github_actions.py  service_account.json
streamlit/: README.md  config.py  main.py
workflows/: report.yaml
(+45 files in other folders)
